[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/theme_hud_main.tres" type="Theme" id=1]
[ext_resource path="res://scripts/scene_scripts/scn_ui_settings_menu.gd" type="Script" id=2]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="ScnUiSettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="CenterContainer"]
margin_left = 460.0
margin_top = 240.0
margin_right = 1460.0
margin_bottom = 840.0
rect_min_size = Vector2( 1000, 600 )
theme = ExtResource( 1 )
tab_align = 0

[node name="Graphics" type="VBoxContainer" parent="CenterContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 88.0
margin_right = -20.0
margin_bottom = -10.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/TabContainer/Graphics"]
margin_right = 960.0
margin_bottom = 70.0

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/TabContainer/Graphics/HBoxContainer2"]
margin_right = 500.0
margin_bottom = 70.0
rect_min_size = Vector2( 500, 70 )
theme = ExtResource( 1 )
text = "Fullscreen"

[node name="CheckBoxFullscreen" type="CheckBox" parent="CenterContainer/TabContainer/Graphics/HBoxContainer2"]
margin_left = 504.0
margin_right = 574.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
mouse_default_cursor_shape = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/TabContainer/Graphics"]
margin_top = 74.0
margin_right = 960.0
margin_bottom = 78.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/TabContainer/Graphics"]
margin_top = 82.0
margin_right = 960.0
margin_bottom = 152.0

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/TabContainer/Graphics/HBoxContainer3"]
margin_right = 500.0
margin_bottom = 70.0
rect_min_size = Vector2( 500, 70 )
theme = ExtResource( 1 )
text = "Animation speed"

[node name="SliderAnimateSpeed" type="HSlider" parent="CenterContainer/TabContainer/Graphics/HBoxContainer3"]
margin_left = 504.0
margin_right = 904.0
margin_bottom = 20.0
rect_min_size = Vector2( 400, 0 )
mouse_default_cursor_shape = 2
max_value = 2.0
step = 0.5
value = 1.0
tick_count = 5

[node name="HBoxContainer4" type="HBoxContainer" parent="CenterContainer/TabContainer/Graphics"]
margin_top = 156.0
margin_right = 960.0
margin_bottom = 226.0

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/TabContainer/Graphics/HBoxContainer4"]
margin_right = 500.0
margin_bottom = 70.0
rect_min_size = Vector2( 500, 70 )
theme = ExtResource( 1 )
text = "Roman numerals"

[node name="CheckBoxRomanNums" type="CheckBox" parent="CenterContainer/TabContainer/Graphics/HBoxContainer4"]
margin_left = 504.0
margin_right = 574.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
mouse_default_cursor_shape = 2

[node name="Audio" type="VBoxContainer" parent="CenterContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="BtnBack" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -121.0
margin_right = 221.0
margin_bottom = -36.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
shortcut = SubResource( 2 )
text = "Back"

[connection signal="visibility_changed" from="." to="." method="_on_ScnUiSettingsMenu_visibility_changed"]
[connection signal="toggled" from="CenterContainer/TabContainer/Graphics/HBoxContainer2/CheckBoxFullscreen" to="." method="_on_CheckBoxFullscreen_toggled"]
[connection signal="drag_ended" from="CenterContainer/TabContainer/Graphics/HBoxContainer3/SliderAnimateSpeed" to="." method="_on_SliderAnimateSpeed_drag_ended"]
[connection signal="value_changed" from="CenterContainer/TabContainer/Graphics/HBoxContainer3/SliderAnimateSpeed" to="." method="_on_SliderAnimateSpeed_value_changed"]
[connection signal="toggled" from="CenterContainer/TabContainer/Graphics/HBoxContainer4/CheckBoxRomanNums" to="." method="_on_CheckBoxRomanNum_toggled"]
[connection signal="pressed" from="BtnBack" to="." method="_on_BtnBack_pressed"]
